--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uex-TM-f0p" userLabel="Preview Image">
-                                        <rect key="frame" x="0.0" y="43.5" width="240" height="360"/>
+                                        <rect key="frame" x="0.0" y="43.5" width="219" height="328.5"/>
                                         <color key="backgroundColor" name="YP WHITE (iOS)"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Uex-TM-f0p" secondAttribute="height" multiplier="2:3" id="Aoc-Gp-J6y"/>
@@ -56,8 +56,11 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Wu5-2W-iJt">
+                                        <rect key="frame" x="0.0" y="392" width="374" height="20"/>
+                                    </activityIndicatorView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4FI-pS-TL2" userLabel="Question Label">
-                                        <rect key="frame" x="0.0" y="423.5" width="332" height="300.5"/>
+                                        <rect key="frame" x="0.0" y="432" width="332" height="292"/>
                                         <color key="backgroundColor" name="YP Black (iOS)"/>
                                         <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="23"/>
                                         <color key="textColor" name="YP WHITE (iOS)"/>
@@ -106,6 +109,12 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerY" secondItem="vtx-jB-5Vd" secondAttribute="centerY" id="OQ2-Rt-DO1"/>
+                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerY" secondItem="vtx-jB-5Vd" secondAttribute="centerY" id="XPv-ni-bsb"/>
+                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerX" secondItem="vtx-jB-5Vd" secondAttribute="centerX" id="kb3-nG-8Da"/>
+                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerX" secondItem="vtx-jB-5Vd" secondAttribute="centerX" id="xPc-lE-Vbd"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -122,6 +131,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="Wu5-2W-iJt" id="Dzp-1V-dvB"/>
                         <outlet property="countLabel" destination="pty-3x-zgG" id="jVr-6a-dH6"/>
                         <outlet property="imageView" destination="Uex-TM-f0p" id="Ftw-3Z-K8T"/>
                         <outlet property="textLabel" destination="4FI-pS-TL2" id="LXl-El-GAr"/>
