--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -45,22 +45,16 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uex-TM-f0p" userLabel="Preview Image">
-                                        <rect key="frame" x="0.0" y="43.5" width="219" height="328.5"/>
+                                        <rect key="frame" x="0.0" y="43.5" width="374" height="548.5"/>
                                         <color key="backgroundColor" name="YP WHITE (iOS)"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="Uex-TM-f0p" secondAttribute="height" multiplier="2:3" id="Aoc-Gp-J6y"/>
-                                        </constraints>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                 <integer key="value" value="20"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </imageView>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Wu5-2W-iJt">
-                                        <rect key="frame" x="0.0" y="392" width="374" height="20"/>
-                                    </activityIndicatorView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше, чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4FI-pS-TL2" userLabel="Question Label">
-                                        <rect key="frame" x="0.0" y="432" width="332" height="292"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма больше, чем 7?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4FI-pS-TL2" userLabel="Question Label">
+                                        <rect key="frame" x="0.0" y="612" width="332" height="112"/>
                                         <color key="backgroundColor" name="YP Black (iOS)"/>
                                         <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="23"/>
                                         <color key="textColor" name="YP WHITE (iOS)"/>
@@ -109,24 +103,25 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerY" secondItem="vtx-jB-5Vd" secondAttribute="centerY" id="OQ2-Rt-DO1"/>
-                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerY" secondItem="vtx-jB-5Vd" secondAttribute="centerY" id="XPv-ni-bsb"/>
-                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerX" secondItem="vtx-jB-5Vd" secondAttribute="centerX" id="kb3-nG-8Da"/>
-                                    <constraint firstItem="Wu5-2W-iJt" firstAttribute="centerX" secondItem="vtx-jB-5Vd" secondAttribute="centerX" id="xPc-lE-Vbd"/>
-                                </constraints>
                             </stackView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Wu5-2W-iJt">
+                                <rect key="frame" x="20" y="438" width="374" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black (iOS)"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vtx-jB-5Vd" secondAttribute="trailing" constant="20" id="DOw-Kl-kHT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="4FI-pS-TL2" secondAttribute="trailing" constant="62" id="NbP-V2-Ql6"/>
+                            <constraint firstItem="Uex-TM-f0p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="O7N-hs-4Qa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Uex-TM-f0p" secondAttribute="trailing" constant="20" id="Sg2-ha-XnW"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vtx-jB-5Vd" secondAttribute="bottom" id="U0g-hv-jkC"/>
                             <constraint firstItem="4FI-pS-TL2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="62" id="YyR-zW-q4M"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yiN-iL-uIO" secondAttribute="trailing" constant="20" id="hHc-eh-PAB"/>
                             <constraint firstItem="vtx-jB-5Vd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="jAF-Ax-ave"/>
                             <constraint firstItem="vtx-jB-5Vd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mug-lC-WvU"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Uex-TM-f0p" secondAttribute="bottom" constant="212" id="pcb-Lx-RTX"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pty-3x-zgG" secondAttribute="trailing" constant="20" id="rfm-ih-dLS"/>
                         </constraints>
                     </view>
