закончен урок №6 без ошибок

--- a/MovieQuiz/Presentation/Base.lproj/Main.storyboard
+++ b/MovieQuiz/Presentation/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                         <outlet property="activityIndicator" destination="Wu5-2W-iJt" id="Dzp-1V-dvB"/>
                         <outlet property="countLabel" destination="pty-3x-zgG" id="jVr-6a-dH6"/>
                         <outlet property="imageView" destination="Uex-TM-f0p" id="Ftw-3Z-K8T"/>
-                        <outlet property="textLabel" destination="4FI-pS-TL2" id="LXl-El-GAr"/>
+                        <outlet property="questionLabel" destination="4FI-pS-TL2" id="iUI-sh-lSw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
